2008-07-30  Takao Fujiwara  <takao.fujiwara@sun.com>

	Reviewed by Andre Klapper <a9016009@gmx.de>

	** Fix for bug #545300

	* gui/merging/eab-contact-duplicate-detected.glade:
	Add a translatable tag in "_Merge" string.

2008-07-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #544383

	* gui/contact-list-editor/e-contact-list-editor.c:
	(e_contact_list_editor_get_contact): Put list members in reverse order,
	because 'e_vcard_add_attribute' uses prepend, thus changes order on
	every single save of the contact list.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* addressbook.error.xml: Fix some strings. See bug #543753.

2008-07-13  Keith Packard  <keithp@keithp.com>

	** Fix for bug #541355

	* conduit/address-conduit.c:
	The pilot link code does call free_match on data returned from the 
	for_each method, which the evolution conduits aren't prepared to 
	handle. This patch removes any freed objects from the 'locals' list in 
	each conduit which otherwise frees them again when the conduit is closed.

2008-07-09  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #228725

	* gui/widgets/e-minicard-view.h: (struct _EMinicardView):
	* gui/widgets/e-minicard-view.c: (set_empty_message),
	(stop_state_changed), (e_minicard_view_set_property),
	(e_minicard_view_dispose), (e_minicard_view_init):
	Show different message in a view when searching.

2008-07-03  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #540152

	* gui/component/addressbook-component.c: (ensure_sources):
	Unref source only when we created it - the list owns the pointer now.

2008-06-24  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #539755

	* importers/evolution-csv-importer.c: (parseLine):
	Do not leak (introduced in bug #440818).
	* importers/evolution-csv-importer.c: (add_to_notes),
	(parseLine), (getNextCSVEntry): Do not access memory beyond
	the columns array.

2008-06-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #440818 (patch by Rodrigo Castro)
